Development
	Autodetection and loading of m3u playlists
	Implement many of the suggestions from JP at Zenwalk
	Add verbose flag to edit->preferences dialog
	Fix app icon selection code, it was not loading it properly from the theme
	Add directory remembering to Save and Load Playlist dialogs
	Add Add and Remove buttons to the playlist window
	Split playlist code into its own module
	Fix several problems with the GUI crashing and clean up a couple of minor issues
	Change priority of thread polling to low
	When given a url to play and under control of gecko-mediaplayer pass -user-agent NSPlayer to mplayer
	Add support for real media pnm:// urls
	Make the GUI responsive while caching from a website
	Enable setting random playback from "Edit" menu
	Add playlist loading
	Add playlist saving to .pls file type
	Fix problem with reference playlist where files had Ref prefix
	When playlist is dropped on window or playlist viewer, don't autoplay, but setup to start at first item, unless random
	Load a playlist when dropped on the playlist window or on the player window
	Enable --random flag (prev item on playlist is still not great here)
	More GUI work on the playlist
	Common function to add item to playlist
	Only let there be one active playlist dialog
	Better drag and drop support for playlist
	Add dbus method Add "filename" to append a filename to the playlist
	Fix up dbus interface to use internal playlist
	Active selected song in playlist on doubleclick
	Make selected item on playlist follow active item
	Implement speed doublt key } and speed half key {
	Implement BackSpace as return to default speed and fix something dumb
	Implement speed increase key ] and speed decrease key [
	Add CDDA parsing. So grab the track list off the CD and make it into a playlist
	Drag and drop to the playlist works
	More playlist work. The prev and next media buttons work properly now
	More playlist work, when opening a file or drag and dropping a file to the player window, clear the list